--- a/src/posts/templates/posts/main.html
+++ b/src/posts/templates/posts/main.html
@@ -11,8 +11,23 @@ Posts
 {% endblock title %}
 
 {% block content %}
-    {% for obj in qs %}
-        {{obj.title}} - {{obj.body}} <br/>
-    {% endfor %}
-    <div id="hello-world"></div>
+
+{% if user.is_authenticated %}
+  <p>Logged in as: {{ user.username }}</p>
+{% else %}
+  <p>Not logged in</p>
+{% endif %}
+
+    <div id="posts-box"></div>
+
+    <div id="spinner-box" class="text-center">
+        <div class="spinner-border" role="status">
+        </div>
+    </div>
+
+
+    <div class="text-center mb-3" id="end-box">
+        <button class="btn btn-primary" id="load-btn">Load More</button>
+    </div>
+        
 {% endblock content %}
