--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,12 +15,15 @@
     <!-- Custom css -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
-    <!-- dropzone -->
-    <link rel="stylesheet" href="{% static 'dropzone.css' %}">
-    <script src="{% static 'dropzone.js' %}" defer></script>
+  <!-- Dropzone v5 (CDN) -->
+  <link rel="stylesheet" href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css" />
+  <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js" defer></script>
+
 
     <!-- Custom js -->
     <script src="{% static 'functions.js' %}" defer></script>
+    <!-- <script src="{% static 'main.js' %}" defer></script> -->
+
     {% block scripts %}
     {% endblock scripts %}
 
