--- a/src/posts/templates/posts/main.html
+++ b/src/posts/templates/posts/main.html
@@ -12,11 +12,35 @@ Posts
 
 {% block content %}
 
-{% if user.is_authenticated %}
-  <p>Logged in as: {{ user.username }}</p>
-{% else %}
-  <p>Not logged in</p>
-{% endif %}
+    {% if user.is_authenticated %}
+        <p>Logged in as: {{ user.username }}</p>
+        {% else %}
+        <p>Not logged in</p>
+    {% endif %}
+
+    <!-- Modal -->
+    <div class="modal fade" id="addPostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Create Post</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">close</button>
+                    <button type="button" class="btn btn-success">+ add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <button type="button" class="btn btn-info mb-2" data-bs-toggle="modal" data-bs-target="#addPostModal">
+        Add Post
+    </button>
+
 
     <div id="posts-box"></div>
 
