Completed up to "Adding Limitations to the Dropzone" (86% of tutorial)

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Custom css -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
-  <!-- Dropzone v5 (CDN) -->
+  <!-- Dropzone v5 -->
   <link rel="stylesheet" href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css" />
   <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js" defer></script>
 
