--- a/src/posts/templates/posts/detail.html
+++ b/src/posts/templates/posts/detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block scripts %}
 <script src="{% static 'posts/detail.js' %}" defer></script>
@@ -11,9 +12,96 @@
 {% endblock title %}
 
 {% block content %}
+    <!-- Update Modal -->
+    <div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Update Post</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="alert-box"></div>
+                    <form id="update-form">
+                        {% csrf_token %}
+                        {{form|crispy}}
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-success">Update</button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+        <!-- Delete Modal -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Post</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                       <p>Are you sure you want to delete the post <b>"{{obj.title}}"</b>?</p>
+                       <div class="modal-footer">
+                            <form id="delete-form">
+                                {% csrf_token %}
+                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-success">Delete</button>
+                            
+                            </form>
+                        </div>
+                    </div>
+    
+                </div>
+            </div>
+        </div>
+
+        {% if obj.get_photos %}
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                {% for p in obj.get_photos %}
+                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                    <img src="{{ p.image.url }}" class="d-block" style="max-height: 300px; width: auto; max-width: 100%; height: auto; object-fit: contain; margin: 0 auto;" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{ p.title }}</h5>
+                        <p>{{ p.description }}</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        {% else %}
+           <div class="mt-2 mb-2">No photos to show</div>
+        {% endif %}
+
+
+       
+
+
+
+
 <button id="back-btn" class="btn btn-info">Back</button>
-<button id="update-btn" class="btn btn-primary not-visible">Update</button>
-<button id="delete-btn" class="btn btn-danger not-visible">Delete</button>
+<button id="update-btn" class="btn btn-primary not-visible" data-bs-toggle="modal" data-bs-target="#updateModal">Update</button>
+<button id="delete-btn" class="btn btn-danger not-visible"data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
 
 <div id="spinner-box" class="text-center">
     <div class="spinner-border" role="status">
